--- a/app/src/main/res/layout/recipe_fragment.xml
+++ b/app/src/main/res/layout/recipe_fragment.xml
@@ -136,6 +136,7 @@
                     android:id="@+id/recyclerIngredients"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:visibility="gone"
                     android:background="@drawable/back_green_stroke"
                     android:paddingStart="12dp"
@@ -156,6 +157,7 @@
                     android:id="@+id/recyclerPoints"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:layout_marginBottom="18dp"
                     android:background="@drawable/back_bottom_light"
                     android:paddingStart="12dp"
